# fvattrs

./: CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: index.md  reference.md  tutorials.md  usage.md
src/fvattrs/: __init__.py  _converters.py  _core.py  _utils.py  _validators.py  converters.py  validators.py
tests/: _fixtures.py  conftest.py  strategies.py
tests/test_converters/: test_to_date.py  test_to_path.py
tests/test_core/: test_arguments.py  test_define_io.py  test_defines.py  test_generic_variable.py  test_keyword_arguments.py  test_output.py  test_variable.py
tests/test_utils/: test_always_iterable.py
tests/test_validators/: test_generic.py  test_is_file.py  test_is_folder.py
