[project]
name = "fvattrs"
version = "0.0.0a0"
description = "Function validation using Attrs."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">3.9"

dependencies = ["attrs>=26.1.0"]

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # __init__ typically never use imports.
    "D104", # We deem __init__ docstrings are superfluous.
]
"tests/**/*.py" = [
    "INP001", # Tests are not expected to be importable modules
    "D100",   # We deem test module docstrings are superfluous.
    "SLF001", # Private members are not private enough to be untested.
    "S101",   # This is Pytest way of doing things.
]


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--basetemp=./test/tmp"

[tool.coverage.run]
omit = ["conftest.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
